DevTools: skip all pauses during provisional load

On browser side we suspend message dispatching during provisional load,
so it is not possible to resume if pause happens.

R=dgozman@chromium.org

Bug: chromium:812091
Change-Id: Id9f7015febfb5ec868af2266aa8e3ca76eb7dd3d
Reviewed-on: https://chromium-review.googlesource.com/c/1252802
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Aleksey Kozyatinskiy <kozyatinskiy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596346}
Former-commit-id: 6eedda6710d1236930a4cb9be966d1247dcf99a1