third_party/blink/renderer/core/exported/web_dev_tools_agent_impl.h
@@ -83,6 +83,7 @@ class CORE_EXPORT WebDevToolsAgentImpl final
 
   // Instrumentation from web/ layer.
   void DidCommitLoadForLocalFrame(LocalFrame*);
+  void DidFailProvisionalLoad(LocalFrame*);
   void DidStartProvisionalLoad(LocalFrame*);
   bool ScreencastEnabled();
   String NavigationInitiatorInfo(LocalFrame*);
